---------------------------------------------------------------------------------------------------
Version: 0.18.311
Date: 2020-08-01
     - Make production/construction inside the lab not show up on statistics outside.

---------------------------------------------------------------------------------------------------
Version: 0.18.310
Date: 2020-06-15
     - possible fix bug report by NiteAngyl to "Gui element with name BPL_Flow already present in the parent element." on gui.lua

---------------------------------------------------------------------------------------------------
Version: 0.18.31
Date: 2020-06-15
   Major Features
     - Update for <0.18.27+
     - Spanish translations
     - New thumbnail.