@@ -8,11 +8,28 @@ function InitAllPlayers()
     end
 end
 
+function InitIsUnlocked(player_index) do
+    local is_technology_required = settings.startup["blueprint-lab-design-use-technology"].value
+    local tech = settings.startup["blueprint-lab-design-unlock-technology"].value
+    local playerData = global[player_index]
+    if is_technology_required
+            and game.players[player_index].force.technologies[tech] ~= nil
+            and game.players[player_index].force.technologies[tech].enabled
+            and not game.players[player_index].force.technologies[tech].researched
+        then
+            playerData.isUnlocked = false
+        else
+            playerData.isUnlocked = true
+        end
+    end
+end
+
 function InitPlayer(player_index)
     if global[player_index] then return end
 
     global[player_index] = {}
-    CreateGui(player_index)    
+    InitIsUnlocked(player_index)
+    CreateGui(player_index)
 end
 
 script.on_init(function()
@@ -25,6 +42,27 @@ script.on_configuration_changed(function(event)
         and event.mod_changes["TheBlueprintLab_bud"].old_version == "0.0.1" then
         ClearVersion001()
         InitAllPlayers()
+    end
+    
+    for _, player in pairs(game.players) do
+        InitIsUnlocked(player.index)
+        UpdateGui(player.index)
+    end
+end)
+
+script.on_load(function()
+    local is_technology_required = settings.startup["blueprint-lab-design-use-technology"].value
+    local tech = settings.startup["blueprint-lab-design-unlock-technology"].value
+    if is_technology_required then
+        script.on_event(defines.events.on_research_finished, function (event)
+            if event.research.name == tech then
+                for _, player in pairs(event.research.force.players) do
+                    local playerData = global[player.index]
+                    playerData.isUnlocked = true
+                    UpdateGui(player.index)
+                end
+            end
+        end)
     end
 end)
 
