@@ -4,6 +4,10 @@ BPL_LabButtonHotkey=Enter/Exit Blueprint Lab
 [controls-description]
 _BPL_LabButtonHotkey=Enter/Exit Blueprint Lab
 
+[mod-setting-name]
+blueprint-lab-design-use-technology=Require research to unlock lab?
+blueprint-lab-design-unlock-technology=Required research
+
 [bpl]
 LabButton=TheLab
 LabButtonReturn=TheLab - return
