@@ -2,29 +2,40 @@ require "logic"
 require "init-lab"
 
 function CreateGui(player_index)
-
     local player = game.players[player_index]
     local playerData = global[player_index]
-    if player.gui.left.add {type = "flow", name = "BPL_Flow"} then
-        player.gui.left.clear()
-      end
-      playerData.flow = player.gui.left.add {type = "flow", name = "BPL_Flow"}
+    if player.gui.left["BPL_Flow"] == nil then
+        player.gui.left.add {type = "flow", name = "BPL_Flow"}
+    end
+    playerData.flow = player.gui.left["BPL_Flow"]
+    playerData.flow.clear()
     playerData.button = playerData.flow.add {type = "button", name = "BPL_LabButton", 
         caption = {"bpl.LabButton"}, tooltip = {"bpl.LabButtonTooltip"}}
-    --playerData.flow.add {type = "button", name = "BPL_StateButton", caption = {"bpl.StateButton"}}
+    playerData.clearButton = playerData.flow.add {type = "button", name = "BPL_ClearButton", 
+        caption = {"bpl.ClearButton"}, tooltip = {"bpl.ClearButtonTooltip"}}
+    
+    UpdateGui(player_index)
 end
 
 function UpdateGui(player_index)
-    local player = game.players[player_index]
     local playerData = global[player_index]
 
     if playerData.inTheLab then
         playerData.button.caption = {"bpl.LabButtonReturn"}
-        playerData.clearButton = playerData.flow.add {type = "button", name = "BPL_ClearButton", 
-            caption = {"bpl.ClearButton"}, tooltip = {"bpl.ClearButtonTooltip"}}
+        --playerData.flow.visible = true
+        playerData.button.visible = true
+        playerData.clearButton.visible = true
     else
-        playerData.button.caption = {"bpl.LabButton"}
-        playerData.clearButton.destroy()
+        if playerData.isUnlocked then
+            playerData.button.caption = {"bpl.LabButton"}
+            --playerData.flow.visible = true
+            playerData.button.visible = true
+            playerData.clearButton.visible = false
+        else
+            --playerData.flow.visible = false
+            playerData.button.visible = false
+            playerData.clearButton.visible = false
+        end
     end
 end
 
