@@ -1,0 +1,14 @@
+data:extend({
+    {
+        type = "bool-setting",
+        name = "blueprint-lab-design-use-technology",
+        setting_type = "startup",
+        default_value = false
+    },
+    {
+        type = "string-setting",
+        name = "blueprint-lab-design-unlock-technology",
+        setting_type = "startup",
+        default_value = "construction-robotics"
+    },
+})
